tests/ui/const-generics/mgca/explicit_anon_consts.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:15:33
   |
LL | type Adt4<const N: usize> = Foo<{ 1 + 1 }>;
   |                                 ^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:23:34
   |
LL | type Arr4<const N: usize> = [(); 1 + 1];
   |                                  ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:32:19
   |
LL |     let _4 = [(); 1 + 1];
   |                   ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:45:38
   |
LL | const ITEM4<const N: usize>: usize = { 1 + 1 };
   |                                      ^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:62:23
   |
LL |     T4: Trait<ASSOC = { 1 + 1 }>,
   |                       ^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:71:50
   |
LL | struct Default4<const N: usize, const M: usize = { 1 + 1 }>;
   |                                                  ^^^^^^^^^

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:30:27
   |
LL |     let _3 = [(); const { N }];
   |                           ^

error: aborting due to 7 previous errors

